--- a/RTTI/CMakeLists.txt
+++ b/RTTI/CMakeLists.txt
@@ -5,8 +5,8 @@ set(CMAKE_CXX_STANDARD 17)
 
 include_directories(${Graphics_SOURCE_DIR})
 
-add_executable(Graphics main.cpp DynamicCast.h)
-add_executable(DinamicCastTest DynamicCastTest.cpp DynamicCast.h
+add_executable(Graphics main.cpp DynamicCastObject.h)
+add_executable(DinamicCastTest DynamicCastTest.cpp DynamicCastObject.h
         gtest/gtest.h
         gtest/gtest-all.cc
         gtest/gtest_main.cc)
