--- a/build-ConvexHull-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/Makefile
+++ b/build-ConvexHull-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/Makefile
@@ -220,6 +220,7 @@ Makefile: ../ConvexHull/ConvexHull.pro C:/Qt/5.12.0/mingw73_64/mkspecs/win32-g++
 		C:/Qt/5.12.0/mingw73_64/mkspecs/features/qt_config.prf \
 		C:/Qt/5.12.0/mingw73_64/mkspecs/win32-g++/qmake.conf \
 		C:/Qt/5.12.0/mingw73_64/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		C:/Qt/5.12.0/mingw73_64/mkspecs/features/exclusive_builds.prf \
 		C:/Qt/5.12.0/mingw73_64/mkspecs/features/toolchain.prf \
 		C:/Qt/5.12.0/mingw73_64/mkspecs/features/default_pre.prf \
@@ -243,6 +244,7 @@ Makefile: ../ConvexHull/ConvexHull.pro C:/Qt/5.12.0/mingw73_64/mkspecs/win32-g++
 		C:/Qt/5.12.0/mingw73_64/mkspecs/features/yacc.prf \
 		C:/Qt/5.12.0/mingw73_64/mkspecs/features/lex.prf \
 		../ConvexHull/ConvexHull.pro \
+		C:/Qt/5.12.0/mingw73_64/lib/Qt5OpenGL.prl \
 		C:/Qt/5.12.0/mingw73_64/lib/Qt5Widgets.prl \
 		C:/Qt/5.12.0/mingw73_64/lib/Qt5Gui.prl \
 		C:/Qt/5.12.0/mingw73_64/lib/Qt5Core.prl \
@@ -407,6 +409,7 @@ C:/Qt/5.12.0/mingw73_64/mkspecs/features/qt_functions.prf:
 C:/Qt/5.12.0/mingw73_64/mkspecs/features/qt_config.prf:
 C:/Qt/5.12.0/mingw73_64/mkspecs/win32-g++/qmake.conf:
 C:/Qt/5.12.0/mingw73_64/mkspecs/features/spec_post.prf:
+.qmake.stash:
 C:/Qt/5.12.0/mingw73_64/mkspecs/features/exclusive_builds.prf:
 C:/Qt/5.12.0/mingw73_64/mkspecs/features/toolchain.prf:
 C:/Qt/5.12.0/mingw73_64/mkspecs/features/default_pre.prf:
@@ -430,6 +433,7 @@ C:/Qt/5.12.0/mingw73_64/mkspecs/features/exceptions.prf:
 C:/Qt/5.12.0/mingw73_64/mkspecs/features/yacc.prf:
 C:/Qt/5.12.0/mingw73_64/mkspecs/features/lex.prf:
 ../ConvexHull/ConvexHull.pro:
+C:/Qt/5.12.0/mingw73_64/lib/Qt5OpenGL.prl:
 C:/Qt/5.12.0/mingw73_64/lib/Qt5Widgets.prl:
 C:/Qt/5.12.0/mingw73_64/lib/Qt5Gui.prl:
 C:/Qt/5.12.0/mingw73_64/lib/Qt5Core.prl:
