--- a/build-ConvexHull-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/Makefile.Debug
+++ b/build-ConvexHull-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/Makefile.Debug
@@ -854,7 +854,11 @@ debug/mainwindow.o: ../ConvexHull/mainwindow.cpp ../ConvexHull/mainwindow.h \
 		C:/Qt/5.12.0/mingw73_64/include/QtGui/QList \
 		C:/Qt/5.12.0/mingw73_64/include/QtCore/QtGlobal \
 		C:/Qt/5.12.0/mingw73_64/include/QtCore/QMetaType \
-		C:/Qt/5.12.0/mingw73_64/include/QtCore/QString
+		C:/Qt/5.12.0/mingw73_64/include/QtCore/QString \
+		C:/Qt/5.12.0/mingw73_64/include/QtCore/QDebug \
+		C:/Qt/5.12.0/mingw73_64/include/QtWidgets/QMessageBox \
+		C:/Qt/5.12.0/mingw73_64/include/QtWidgets/qmessagebox.h \
+		C:/Qt/5.12.0/mingw73_64/include/QtWidgets/qdialog.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\mainwindow.o ..\ConvexHull\mainwindow.cpp
 
 debug/glwidget.o: ../ConvexHull/glwidget.cpp ../ConvexHull/glwidget.h \
