--- a/RTTI/CMakeLists.txt
+++ b/RTTI/CMakeLists.txt
@@ -10,3 +10,7 @@ add_executable(DinamicCastTest DynamicCastTest.cpp DynamicCastObject.h
         gtest/gtest.h
         gtest/gtest-all.cc
         gtest/gtest_main.cc)
+add_executable(DCOBits DCOBitsTest.cpp DCOBits.h
+        gtest/gtest.h
+        gtest/gtest-all.cc
+        gtest/gtest_main.cc)
