--- a/Delaunay/CMakeLists.txt
+++ b/Delaunay/CMakeLists.txt
@@ -20,8 +20,9 @@ add_executable(sfml main.cpp
         numeric.cpp
         triangle.h
         triangle.cpp
-        vector2.h
-        vector2.cpp circumcenter.h
+        #vector2.h
+        #vector2.cpp
+        circumcenter.h
         #graham.cpp
         )
 target_link_libraries(sfml sfml-system sfml-window sfml-graphics sfml-network sfml-audio)
