--- a/CompGeom/CMakeLists.txt
+++ b/CompGeom/CMakeLists.txt
@@ -5,6 +5,7 @@ project(CompGeom)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(CompGeom main.cpp)
+add_executable(G2 G2.cpp)
 add_executable(E E.cpp)
 add_executable(C C.cpp)
 add_executable(H H.cpp)
@@ -14,3 +15,4 @@ add_executable(N N.cpp)
 add_executable(L L.cpp)
 add_executable(B B.cpp)
 add_executable(K K.cpp)
+add_executable(G G.cpp)
